[package]
name = "keebgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
time = { version = "0.3.16", features = ["serde-well-known"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
