[package]
name = "keebgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
knuffel = "2.0.0"
miette = { version = "5.4.1", features = ["fancy"] }
reqwest = "0.11.12"
time = { version = "0.3.16", features = ["serde-well-known"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
